--- a/static/less/template-layout.less
+++ b/static/less/template-layout.less
@@ -18,7 +18,7 @@
   z-index: 2501;
 
   @media (min-width: @header-breakpoint) {
-    height: 165px; 
+    min-height: 165px; 
   }
 }
 
