--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -65,6 +65,7 @@
 @screen-xs-min: 480px;
 @screen-sm-min: 768px;
 @screen-md-min: 1024px;
+@screen-lg-min: 1200px;
 // Point at which the header becomes uncompressed
 @header-breakpoint: 680px; 
 // Point at which the viewer nav elements become uncompressed
